trying to fix whitespace at tht bottom of chrome mobile, added padding

--- a/css/main.css
+++ b/css/main.css
@@ -132,6 +132,7 @@ nav.dropdown {
 footer.mobileFooter {
   width: 100vw;
   height: auto;
+  padding-bottom: 2vh;
 
   background-color: #444;
 }
